--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Test </title>
+        <title> Test contoh </title>
     </head>
     <body>
-        <h1> Hello World!</h1>
+        <h1> Hello World Go Go!</h1>
     </body>
-</html>
+</html> 
