--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Test contoh </title>
+        <title> RevoU Day1 </title>
     </head>
     <body>
-        <h1> Hello World Go Go!</h1>
+        <h1> Hello World Balance !</h1>
     </body>
 </html> 
